# Pirate-Harbor

./: .gitignore  Agents.md  Implementation plan.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  models.rs
apps/desktop/src-tauri/src/analytics/: completion_stats.rs  gaming_stats.rs  genre_stats.rs  heatmap.rs  identity.rs  milestones.rs  mod.rs  year_in_review.rs
apps/desktop/src-tauri/src/analytics/recommendations/: combiner.rs  mod.rs  (+6 more)
apps/desktop/src-tauri/src/api/: igdb.rs  mod.rs  rawg.rs
apps/desktop/src-tauri/src/assets/: asset_manager.rs  background_cache.rs  cover_cache.rs  dedup.rs  mod.rs  thumbnail_gen.rs
apps/desktop/src-tauri/src/background/: job.rs  mod.rs  queue.rs  scheduler.rs  worker.rs
apps/desktop/src-tauri/src/commands/: achievements.rs  analytics.rs  assets.rs  background.rs  backup.rs  collections.rs  diagnostics.rs  export.rs  games.rs  identity.rs  journal.rs  launcher.rs  metadata.rs  milestones.rs  mod.rs  recommendations.rs  scanner.rs  search.rs  sessions.rs  settings.rs  updater.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs
apps/desktop/src-tauri/src/images/: downloader.rs  mod.rs  processor.rs
apps/desktop/src-tauri/src/metadata/: cover_provider.rs  game_lookup.rs  mod.rs  normalizer.rs  resolver.rs
apps/desktop/src-tauri/src/steam_bridge/: achievement_router.rs  achievement_watcher.rs  dll_swap.rs  mod.rs  steam_api.rs
apps/desktop/src-tauri/src/tests/: integration.rs  mod.rs
(+95 files in other folders)
